--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ sans-serif;">
 
             <td style="width: 42.5%;">
               <div style="margin-left: 2.5%; margin-right: 5%;">
-                <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
+                <h1>
                     Srushtiraj
                     <br>
                     Bhosale
@@ -36,8 +36,10 @@ sans-serif;">
 
             <td style="width: 42.5%;">
               <div style="margin-left: 5%; margin-right: 2.5%;">
-                <p style="font-size: large;">
+                <p>
                   Pune
+                  <br>
+                  Maharashtra
                   <br>
                   <a style="text-decoration: none; color: blue;" href="mailto:srushtiraj777@gmail.com" target="_blank">
                     srushtiraj777@gmail.com                    
@@ -74,12 +76,16 @@ sans-serif;">
                       account & authenticate by email & password, select items & place orders 
                       using credit/debit card.
                       <br>
-                      <em>Repository - </em>
+                      <span style="font-weight: 500;">
+                        Repository - 
+                      </span>
                       <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/amazon-app" target="_blank">
                         https://github.com/SrushtirajBhosale/amazon-app                        
                       </a>
                       <br>
-                      <em>Live - </em>
+                      <span style="font-weight: 500;">
+                        Live - 
+                      </span>
                       <a style="text-decoration: none; color: blue;" href="https://app-186f4.web.app" target="_blank">
                         https://app-186f4.web.app                        
                       </a>
@@ -91,12 +97,16 @@ sans-serif;">
                       the video straight from the app. It has functionality of custom channels 
                       & channel pages.
                       <br>
-                      <em>Repository - </em>
+                      <span style="font-weight: 500;">
+                        Repository - 
+                      </span>
                       <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/youtube-app" target="_blank">
                         https://github.com/SrushtirajBhosale/youtube-app                       
                       </a>
                       <br>
-                      <em>Live - </em>
+                      <span style="font-weight: 500;">
+                        Live - 
+                      </span>
                       <a style="text-decoration: none; color: blue;" href="https://srushtirajbhosale.github.io/youtube-app" target="_blank">
                         https://srushtirajbhosale.github.io/youtube-app                       
                       </a>
@@ -124,12 +134,16 @@ sans-serif;">
                     which you can post messages, images & videos. Authentication is 
                     handled using google provider.
                     <br>
-                    <em>Repository - </em>
+                    <span style="font-weight: 500;">
+                      Repository - 
+                    </span>
                     <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/LinkedIn-WebApp" target="_blank">
                       https://github.com/SrushtirajBhosale/LinkedIn-WebApp
                     </a>
                     <br>
-                    <em>Live - </em>
+                    <span style="font-weight: 500;">
+                      Live - 
+                    </span>
                     <a style="text-decoration: none; color: blue;" href="https://social-app-a08d6.firebaseapp.com" target="_blank">
                       https://social-app-a08d6.firebaseapp.com
                     </a>
@@ -143,12 +157,16 @@ sans-serif;">
                     movie. And the best part is you can watch trailer by clicking button 
                     which will redirect you to YouTube.
                     <br>
-                    <em>Repository - </em>
+                    <span style="font-weight: 500;">
+                      Repository - 
+                    </span>
                     <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/cinesrushtihub" target="_blank">
                       https://github.com/SrushtirajBhosale/cinesrushtihub
                     </a>
                     <br>
-                    <em>Live - </em>
+                    <span style="font-weight: 500;">
+                      Live - 
+                    </span>
                     <a style="text-decoration: none; color: blue;" href="https://srushtirajbhosale.github.io/cinesrushtihub" target="_blank">
                       https://srushtirajbhosale.github.io/cinesrushtihub                     
                     </a>
