--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ sans-serif;">
 
             <td style="width: 42.5%;">
               <div style="margin-left: 5%; margin-right: 2.5%;">
-                <p>
+                <p style="font-weight: 500;">
                   Pune
                   <br>
                   Maharashtra
@@ -79,14 +79,14 @@ sans-serif;">
                       <span style="font-weight: 500;">
                         Repository - 
                       </span>
-                      <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/amazon-app" target="_blank">
+                      <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://github.com/SrushtirajBhosale/amazon-app" target="_blank">
                         https://github.com/SrushtirajBhosale/amazon-app                        
                       </a>
                       <br>
                       <span style="font-weight: 500;">
                         Live - 
                       </span>
-                      <a style="text-decoration: none; color: blue;" href="https://app-186f4.web.app" target="_blank">
+                      <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://app-186f4.web.app" target="_blank">
                         https://app-186f4.web.app                        
                       </a>
                     </p>
@@ -100,14 +100,14 @@ sans-serif;">
                       <span style="font-weight: 500;">
                         Repository - 
                       </span>
-                      <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/youtube-app" target="_blank">
+                      <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://github.com/SrushtirajBhosale/youtube-app" target="_blank">
                         https://github.com/SrushtirajBhosale/youtube-app                       
                       </a>
                       <br>
                       <span style="font-weight: 500;">
                         Live - 
                       </span>
-                      <a style="text-decoration: none; color: blue;" href="https://srushtirajbhosale.github.io/youtube-app" target="_blank">
+                      <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://srushtirajbhosale.github.io/youtube-app" target="_blank">
                         https://srushtirajbhosale.github.io/youtube-app                       
                       </a>
                     </p>
@@ -137,14 +137,14 @@ sans-serif;">
                     <span style="font-weight: 500;">
                       Repository - 
                     </span>
-                    <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/LinkedIn-WebApp" target="_blank">
+                    <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://github.com/SrushtirajBhosale/LinkedIn-WebApp" target="_blank">
                       https://github.com/SrushtirajBhosale/LinkedIn-WebApp
                     </a>
                     <br>
                     <span style="font-weight: 500;">
                       Live - 
                     </span>
-                    <a style="text-decoration: none; color: blue;" href="https://social-app-a08d6.firebaseapp.com" target="_blank">
+                    <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://social-app-a08d6.firebaseapp.com" target="_blank">
                       https://social-app-a08d6.firebaseapp.com
                     </a>
                   </p>
@@ -160,14 +160,14 @@ sans-serif;">
                     <span style="font-weight: 500;">
                       Repository - 
                     </span>
-                    <a style="text-decoration: none; color: blue;" href="https://github.com/SrushtirajBhosale/cinesrushtihub" target="_blank">
+                    <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://github.com/SrushtirajBhosale/cinesrushtihub" target="_blank">
                       https://github.com/SrushtirajBhosale/cinesrushtihub
                     </a>
                     <br>
                     <span style="font-weight: 500;">
                       Live - 
                     </span>
-                    <a style="text-decoration: none; color: blue;" href="https://srushtirajbhosale.github.io/cinesrushtihub" target="_blank">
+                    <a style="text-decoration: none; color: blue; font-weight: 500;" href="https://srushtirajbhosale.github.io/cinesrushtihub" target="_blank">
                       https://srushtirajbhosale.github.io/cinesrushtihub                     
                     </a>
                   </p>
